--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
     </section>
     <section hidden id="user">
       <h2>Hello <span class="username"></span>!</h2>
-    </section>
-    <h3>Post a Fragment</h3>
+
+      <h3>Post a Fragment</h3>
       <label for="type">Choose a type:</label>
       <select name="type" id="type">
         <option value="text/plain">text/plain</option>
@@ -57,6 +57,20 @@
       <table class="fragmentList"></table>
       <br />
       <br />
+      <h3>Delete a Fragment</h3>
+      <label for="fragments_id">Enter ID For Delete:</label>
+      <input type="text" id="fragments_id" name="fragments_id" /><br /><br />
+      <button id="delete">Delete</button> <br />
       <br />
+      <br />
+      <h3>Update a Fragment</h3>
+      <label for="fragment_id">Enter ID For update:</label>
+      <input type="text" id="fragment_id" name="fragment_id" /><br /><br />
+      <label for="upd_content">Enter Data:</label>
+      <input type="text" id="upd_content" name="upd_content" /><br /><br />
+      <button id="update">PUT</button>
+    </section>
+    <br />
+    <br />
   </body>
 </html>
